--- a/package.json
+++ b/package.json
@@ -17,3 +17,10 @@
     "url": "http://www.mpc3000ad.com"
   }
 }
+"repository": {
+	"type": "git",
+	"url": "https://github.com/ph2290/MPC3000AD"
+}
+"dependencies": {
+	"url": "https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
+}
