--- a/package.json
+++ b/package.json
@@ -26,5 +26,10 @@
 {
 "dependencies": {
 	"url": "https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
-	}
+	}	
+{
+"engines": {
+    "node": "16"
+  }
 }
+
